--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,25 @@ code {
   width: 90%;
   text-align: justify;
 }
+.beer-container {
+  display: flex;
+}
+.all-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.beer-card {
+  height: 175px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid rgb(156, 156, 156);
+  margin-bottom: 15px;
+}
+.beer-card img {
+  height: 90%;
+}
+.card-info {
+  width: 70%;
+}
